# intellector

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO.txt  build.sh  start.sh
include/: AlphaBetaBot.hpp  AlphaBetaBotTest.hpp  Archiver.hpp  Board.hpp  Bot.hpp  BotFactory.hpp  Cell.hpp  Controller.hpp  EvalGame.hpp  Evaluate.hpp  Figure.hpp  FigureKeeper.hpp  FigureKeeperTest.hpp  FigureMove.hpp  FigureMoveValidator.hpp  FunctionSet.hpp  Game.hpp  GameSettings.hpp  GreedyBot.hpp  MoveTypes.hpp  OptimizedAlphaBetaBot.hpp  PictureCurses.hpp  Position.hpp  RandomBot.hpp  TestBotFactory.hpp  Types.hpp  ViewBase.h  ViewBase.hpp  ViewButtonCurses.hpp  ViewColorSchemeCurses.hpp  ViewCurses.h  ViewCurses.hpp  ViewGameMenuCurses.hpp  ViewHistoryMenuCurses.hpp  ViewInitCurses.hpp  ViewMainMenuCurses.hpp  ViewMenuCurses.hpp  ViewMenuMultiplexerCurses.hpp  ViewMenuTypes.hpp  ViewModelBase.hpp  (+9 more)
include/Bot/: Bot.hpp
include/Bot/AlphaBetaBot/: AlphaBetaBot.hpp  OptimizedAlphaBetaBot.hpp
include/Bot/AlphaBetaBot/Evaluate/: EvalGame.hpp  Evaluate.hpp
include/Bot/AlphaBetaBot/Evaluate/FunctionSet/: FunctionSet.hpp
include/Bot/AlphaBetaBot/FigureKeeper/: FigureKeeper.hpp
include/Bot/BotFactory/: BotFactory.hpp
include/Bot/GreedyBot/: GreedyBot.hpp
include/Bot/RandomBot/: RandomBot.hpp
include/Bot/Test/: AlphaBetaBotTest.hpp  FigureKeeperTest.hpp  TestBotFactory.hpp
include/Controller/: Controller.hpp
include/Model/Archiver/: Archiver.hpp
include/Model/ModelImpl/: Board.hpp  Cell.hpp  FigureMoveValidator.hpp  Game.hpp  MoveTypes.hpp
include/View/Base/: ViewBase.hpp
include/View/Base/Model/: ViewModelBase.hpp
include/View/Curses/Menu/: Menu.hpp  MenuTypes.hpp  ViewMenuCurses.hpp
include/View/Curses/Menu/Menus/BasicButton/: BasicButton.hpp  ViewMainMenuCurses.hpp
include/View/Curses/Menu/Menus/Game/: GameMenu.hpp  ViewGameMenuCurses.hpp
include/View/Curses/Menu/Menus/GameOver/: ViewWinMenuCurses.hpp  WinMenu.hpp
include/View/Curses/Menu/Menus/History/: HistoryMenu.hpp  ViewHistoryMenuCurses.hpp
include/View/Curses/Menu/Menus/Options/: OptionsMenu.hpp  ViewOptionsMenuCurses.hpp
include/View/Curses/Menu/Menus/Options/Appearance/: Options_Appearance_Menu.hpp
include/View/Curses/Menu/Menus/Options/Gameplay/: Options_Gameplay_Menu.hpp  ViewOptions_Gameplay_MenuCurses.hpp
include/View/Curses/Menu/Menus/Preview/: PreviewMenu.hpp  ViewPreviewMenuCurses.hpp
include/View/Curses/Menu/Menus/Rules/: RulesMenu.hpp  ViewRulesMenuCurses.hpp
include/View/Curses/Menu/Menus/Start/: StartMenu.hpp  ViewStartMenuCurses.hpp
include/View/Curses/Menu/Multiplexer/: MenuMultiplexer.hpp  ViewMenuMultiplexerCurses.hpp
include/View/Curses/Model/: Model.hpp  ViewModelCurses.hpp
include/View/Curses/Model/Button/: Button.hpp  ViewButtonCurses.hpp
include/View/Curses/Model/ModelImpl/ColorScheme/: ColorScheme.hpp  ViewColorSchemeCurses.hpp
include/View/Curses/Model/ModelImpl/Init/: Init.hpp
include/View/Curses/Model/ModelImpl/Picture/: Picture.hpp  ViewPictureCurses.hpp
resources/: appearance.btn  back.btn  black_wins.btn  cellAggressor.btn  cellDeffenssor.btn  cellDominator.btn  cellEmpty.btn  cellIntellector.btn  cellLiberator.btn  cellProgressor.btn  classic.btn  contacts.btn  dracula.btn  exit.btn  gameplay.btn  gameplay_-.btn  gameplay_0.btn  gameplay_1.btn  gameplay_2.btn  gameplay_3.btn  gameplay_4.btn  gameplay_5.btn  gameplay_6.btn  gameplay_black_bot.btn  gameplay_white_bot.btn  intellector_info_rules.btn  newgame.btn  options.btn  rules.btn  snow_blue.btn  white_wins.btn
src/: AlphaBetaBot.cpp  Archiver.cpp  Board.cpp  Bot.cpp  BotFactory.cpp  Cell.cpp  Controller.cpp  Evaluate.cpp  Figure.cpp  FigureKeeper.cpp  FigureMove.cpp  FigureMoveValidator.cpp  FunctionSet.cpp  Game.cpp  GreedyBot.cpp  MoveTypes.cpp  OptimizedAlphaBetaBot.cpp  PictureCurses.cpp  Position.cpp  RandomBot.cpp  ViewBase.cpp  ViewButtonCurses.cpp  ViewColorSchemeCurses.cpp  ViewCurses.cpp  ViewGameMenuCurses.cpp  ViewHistoryMenuCurses.cpp  ViewInitCurses.cpp  ViewMainMenuCurses.cpp  ViewMenuCurses.cpp  ViewMenuMultiplexerCurses.cpp  ViewModelCurses.cpp  ViewOptionsMenuCurses.cpp  ViewOptions_Gameplay_MenuCurses.cpp  ViewPictureCurses.cpp  ViewRulesMenuCurses.cpp  ViewStartMenuCurses.cpp  ViewWinMenuCurses.cpp  main.cpp
src/Bot/AlphaBetaBot/: AlphaBetaBot.cpp  OptimizedAlphaBetaBot.cpp
src/Bot/AlphaBetaBot/Evaluate/: Evaluate.cpp
src/Bot/AlphaBetaBot/Evaluate/FunctionSet/: FunctionSet.cpp
src/Bot/AlphaBetaBot/FigureKeeper/: FigureKeeper.cpp
src/Bot/BotFactory/: BotFactory.cpp
src/Bot/GreedyBot/: GreedyBot.cpp
src/Bot/RandomBot/: RandomBot.cpp
src/Controller/: Controller.cpp
src/Model/Archiver/: Archiver.cpp
src/Model/ModelImpl/: Board.cpp  Cell.cpp  FigureMoveValidator.cpp  Game.cpp  MoveTypes.cpp
src/View/Base/: Base.cpp  ViewBase.cpp
src/View/Curses/Menu/: Menu.cpp  ViewMenuCurses.cpp
src/View/Curses/Menu/Menus/BasicButton/: BasicButton.cpp  ViewMainMenuCurses.cpp
src/View/Curses/Menu/Menus/Game/: GameMenu.cpp  ViewGameMenuCurses.cpp
src/View/Curses/Menu/Menus/GameOver/: ViewWinMenuCurses.cpp  WinMenu.cpp
src/View/Curses/Menu/Menus/History/: HistoryMenu.cpp  ViewHistoryMenuCurses.cpp
src/View/Curses/Menu/Menus/Options/: OptionsMenu.cpp  ViewOptionsMenuCurses.cpp
src/View/Curses/Menu/Menus/Options/Appearance/: Options_Appearance_Menu.cpp
src/View/Curses/Menu/Menus/Rules/: RulesMenu.cpp  ViewRulesMenuCurses.cpp
src/View/Curses/Menu/Menus/Start/: StartMenu.cpp  ViewStartMenuCurses.cpp
src/View/Curses/Menu/Multiplexer/: MenuMultiplexer.cpp  ViewMenuMultiplexerCurses.cpp
src/View/Curses/Model/: Model.cpp  ViewModelCurses.cpp
src/View/Curses/Model/Button/: Button.cpp  ViewButtonCurses.cpp
src/View/Curses/Model/ModelImpl/ColorScheme/: ColorScheme.cpp  ViewColorSchemeCurses.cpp
src/View/Curses/Model/ModelImpl/Init/: Init.cpp  ViewInitCurses.cpp
src/View/Curses/Model/ModelImpl/Picture/: Picture.cpp  ViewPictureCurses.cpp
test/: TestBotFactory.cpp  TestMain.cpp  test.cpp
(+2 files in other folders)
